- Добавлены левые и правые скругленные границы у дней для выделения. - По-умолчанию добавлен белый фон (в будущем будет только если загрузился модуль "Какие у меня бонды в этот день"). - Выбран цвет для дней, когда в этот день есть бонды. - Изменено расстояние между неделями, оно уменьшено для того, чтобы была возможность увеличить шрифт. - Увеличен размер шрифта - Увеличен размер шрифта для элемента "Выбор года" - Добавлен базовый тест для страницы календаря - ожидается, что будет выведено 12 месяцев. - Добавлен базовый код обращения на сервер, закомментирован. Вместо него вставлен мок-код возврата пустых данных.

--- a/src/global_styles/app.scss
+++ b/src/global_styles/app.scss
@@ -1,9 +1,8 @@
 @import "color";
 
 body {
-	background-color: $color_first_level;
-}
+  background-color: $color_first_level;
 
-body {
-	font-family: "JetBrains Mono", monospace;
+  font-family: "JetBrains Mono", monospace;
+  font-size: 1em;
 }
